date time on booton

--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -30,9 +30,19 @@
             </app-nav-item>
             }
           </mat-nav-list>
+
+          <span style="position: absolute;
+          top: 95%;
+          padding: 5px 16px;
+          width: 100%;
+          background: antiquewhite;
+          color: black;" >{{fixedDateTime}}</span>
+
         </ng-scrollbar>
       </div>
+
     </mat-sidenav>
+
     }
 
     <!-- ============================================================== -->
@@ -160,4 +170,5 @@
 
     </div>
   </mat-drawer>
+
 </span>
