--- a/src/app/layouts/full/vertical/header/header.component.html
+++ b/src/app/layouts/full/vertical/header/header.component.html
@@ -22,7 +22,7 @@
     <i class="iconify icon-20 d-flex" data-icon="solar:widget-3-line-duotone"></i>
   </button>
 
-  <small style="margin-left: 60px;">Numero de version: {{ fixedDateTime }}</small>
+  <!--<small style="margin-left: 60px;">Numero de version: {{ fixedDateTime }}</small>-->
 
 
   <div class="d-none d-lg-flex">
