--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -12,9 +12,9 @@
 
         <div class="field col-2">
           <label htmlFor="datePurchase">Date </label>
-          <p-calendar [(ngModel)]="data.datePurchase" name="datePurchase" id="datePurchase" ></p-calendar>
+          <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase" ></p-calendar>
         </div>
-
+        
         <div class="field col-5">
           <label htmlFor="shop">Fournisseur</label>
           <p-dropdown [options]="shops"  optionLabel="name" name="shop" [(ngModel)]="data.shop"  >
