--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -12,7 +12,7 @@
 
         <div class="field col-2">
           <label htmlFor="datePurchase">Date </label>
-          <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase" ></p-calendar>
+          <p-calendar [(ngModel)]="data.datePurchase" name="datePurchase" id="datePurchase" ></p-calendar>
         </div>
         
         <div class="field col-5">
