--- a/src/app/pages/product/modalproduct/modalproduct.component.html
+++ b/src/app/pages/product/modalproduct/modalproduct.component.html
@@ -8,7 +8,7 @@
   <p>Code: {{ data.code }}</p>
 
   <p>Condition: {{ data.conditioning?.name }}</p>
-  <p>Poucentage de perte: {{ data.lossPercentage }}</p>
+  <p>Poucentage de perte: {{ data.lossPercentage }}%</p>
   <p>Description: {{ data.description }}</p>
 
 </div>
