--- a/src/app/pages/product/modalproduct/modalproduct.component.html
+++ b/src/app/pages/product/modalproduct/modalproduct.component.html
@@ -5,7 +5,7 @@
   <p>Prix: {{ data.price }}</p>
   <p>Marque: {{ data.brand?.name }}</p>
   <p>Category: {{ data.category?.name }}</p>
-  <p>Code: {{ data.code }}</p>
+  <!-- <p>Code: {{ data.code }}</p> -->
 
   <p>Condition: {{ data.conditioning?.name }}</p>
   <p>Poucentage de perte: {{ data.lossPercentage }}%</p>
