--- a/src/app/pages/course/detail-course/detail-course.component.html
+++ b/src/app/pages/course/detail-course/detail-course.component.html
@@ -17,7 +17,7 @@
   
           <div class="field col-5">
             <label htmlFor="shop">Fournisseur</label>
-            <p-dropdown [options]="shops" [disabled]="true" optionLabel="name" name="shop" [(ngModel)]="data.shop"  >
+            <p-dropdown [options]="shops" [disabled]="true" optionLabel="name" name="shop" [(ngModel)]="shop"  >
               <ng-template let-shop pTemplate="item">
                 <div class="flex align-items-center operatingSystems-item">
                   <div class="flex align-items-center operatingSystems-item">
